# synthDataLab

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dataset_builder/: README.md  __init__.py  config.py  db.py  main.py  requirements.txt
dataset_builder/analysis/: __init__.py  error_analyzer.py
dataset_builder/api/: app.py  service.py
dataset_builder/cbse_math/: __init__.py  benchmark_engine.py  cbse_syllabus.py  gap_analyzer.py  math_generator.py  math_prompts.py  math_schema.py  pdf_ingestor.py
dataset_builder/data/: annotated_dataset.jsonl  error_analysis.json  filtered_dataset.jsonl  latest  math_benchmark.parquet  metrics_report.json  raw_dataset.jsonl
dataset_builder/data/runs/160d216c/: manifest.json
dataset_builder/data/runs/249a7197/: annotated_dataset.jsonl  error_analysis.json  filtered_dataset.jsonl  manifest.json  metrics_report.json  raw_dataset.jsonl  status.json
dataset_builder/data/runs/4920ed5c/: annotated_dataset.jsonl  error_analysis.json  filtered_dataset.jsonl  manifest.json  metrics_report.json  raw_dataset.jsonl
dataset_builder/data/runs/53f4e1bd/: annotated_dataset.jsonl  error_analysis.json  filtered_dataset.jsonl  manifest.json  metrics_report.json  raw_dataset.jsonl  status.json
dataset_builder/data/runs/5cd6d9cc/: annotated_dataset.jsonl  error_analysis.json  filtered_dataset.jsonl  manifest.json  metrics_report.json  raw_dataset.jsonl  status.json
dataset_builder/data/runs/63901e4a/: annotated_dataset.jsonl  error_analysis.json  filtered_dataset.jsonl  manifest.json  metrics_report.json  raw_dataset.jsonl  status.json
dataset_builder/data/runs/68bfc3ec/: manifest.json  status.json
dataset_builder/data/runs/846b25f4/: annotated_dataset.jsonl  error_analysis.json  filtered_dataset.jsonl  manifest.json  metrics_report.json  raw_dataset.jsonl  status.json
dataset_builder/data/runs/8d44bd67/: annotated_dataset.jsonl  error_analysis.json  filtered_dataset.jsonl  manifest.json  metrics_report.json  raw_dataset.jsonl  status.json
dataset_builder/data/runs/9e873961/: manifest.json  status.json
dataset_builder/data/runs/a44ce3a8/: annotated_dataset.jsonl  error_analysis.json  filtered_dataset.jsonl  manifest.json  metrics_report.json  raw_dataset.jsonl
dataset_builder/data/runs/b09281a1/: manifest.json  status.json
dataset_builder/data/runs/b6097187/: annotated_dataset.jsonl  error_analysis.json  filtered_dataset.jsonl  manifest.json  metrics_report.json  raw_dataset.jsonl  status.json
dataset_builder/data/runs/b98114bd/: manifest.json  status.json
dataset_builder/data/runs/c2599b09/: manifest.json
dataset_builder/data/runs/c2d3554b/: annotated_dataset.jsonl  error_analysis.json  filtered_dataset.jsonl  manifest.json  metrics_report.json  raw_dataset.jsonl  status.json
dataset_builder/data/runs/c5288001/: error_analysis.json  manifest.json  metrics_report.json
dataset_builder/data/runs/c6bbd0fc/: annotated_dataset.jsonl  error_analysis.json  filtered_dataset.jsonl  manifest.json  metrics_report.json  raw_dataset.jsonl
dataset_builder/data/runs/d02ad71a/: manifest.json  status.json
dataset_builder/data/runs/d50c5250/: annotated_dataset.jsonl  error_analysis.json  filtered_dataset.jsonl  manifest.json  metrics_report.json  raw_dataset.jsonl
dataset_builder/data/runs/ef237113/: manifest.json  status.json
dataset_builder/data/runs/f6059e1b/: annotated_dataset.jsonl  error_analysis.json  filtered_dataset.jsonl  manifest.json  metrics_report.json  raw_dataset.jsonl  status.json
dataset_builder/data/runs/f85749c6/: annotated_dataset.jsonl  error_analysis.json  filtered_dataset.jsonl  manifest.json  metrics_report.json  raw_dataset.jsonl  status.json
dataset_builder/data/sample_inputs/: sample_articles.json  sample_text.txt
dataset_builder/evaluation/: __init__.py  exporter.py  live_metrics.py  metrics.py  reporter.py
dataset_builder/filtering/: __init__.py  deduplicator.py  fingerprint_store.py  pipeline.py
dataset_builder/generation/: __init__.py  critic_agent.py  evolver.py  generator.py  llm_client.py  orchestrator.py
dataset_builder/ingestion/: __init__.py  image_ingestor.py  ingestor.py  text_ingestor.py
dataset_builder/kaggle_upload/: dataset-metadata.json  math_benchmark.jsonl  math_benchmark.parquet
dataset_builder/prompts/: __init__.py  few_shot_examples.py  templates.py
dataset_builder/schema/: __init__.py  dataset_schema.py
dataset_builder/tests/: test_api.py  test_cbse_math.py  test_critic_agent.py  test_evolver.py  test_fingerprint_dedup.py  test_integration.py  test_live_metrics.py  test_metrics.py  test_orchestrator.py  test_schema.py  test_validator.py
dataset_builder/validation/: __init__.py  annotation.py  llm_reviewer.py  rule_validator.py
docs/: architecture.md  cli-reference.md  configuration.md  index.md  metrics-guide.md  multi-agent.md  production-deployment.md  quickstart.md
ui/: index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
ui/src/: App.jsx  styles.css
ui/test-results/: .last-run.json
ui/test-results/e2e-homepage-has-title-and-create-run-form/: error-context.md
ui/tests/: e2e.spec.js
